[metadata]
name = mopidy_funkwhale
description = "A backend extension for mopidy to stream music from a Funkwhale server"
author = The Funkwhale Collective
author_email = contact+funkwhale@eliotberriot.com
url = https://dev.funkwhale.audio/funkwhale/mopidy
long_description = file: README.rst
license = GLP-3
keywords = code, diff, copy-paste, linter, DRY
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    mopidy>=3,<3.1
    requests
    requests_oauthlib
    pygobject


[options.entry_points]
mopidy.ext =
    funkwhale = mopidy_funkwhale:Extension

[options.extras_require]
test =
    pytest
    pytest-cov
    requests-mock
    pytest-mock
    factory_boy

dev =
    ipython
    ipdb

build =
    setuptools
    wheel

publish =
    twine

[options.packages.find]
exclude =
    tests

[bdist_wheel]
universal = 1

[tool:pytest]
testpaths = tests
